syntax = "proto3";

package library;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
}

message AddBookRequest {
  Book book = 1;
}

message Empty {}

message GetBookRequest {
  string id = 1;
}

message UpdateBookRequest {
  Book book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message BookList {
repeated Book books = 1;
}

service LibraryService {
  rpc AddBook (AddBookRequest) returns (Book) {}
  rpc GetAllBooks (Empty) returns (BookList) {}
  rpc GetBook (GetBookRequest) returns (Book) {}
  rpc UpdateBook (UpdateBookRequest) returns (Book) {}
  rpc DeleteBook (DeleteBookRequest) returns (Book) {}
}
